Update to Quarkus with Docker
Update to Quarkus with Docker